--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,8 @@ body {
   font-size: 1em;
   color: #16191D;
   line-height: 1.3;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 main {
@@ -27,12 +23,8 @@ button {
 }
 
 .more-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   color: #F8C154;
   font-size: 1.125em;
   cursor: pointer;
@@ -43,19 +35,10 @@ button {
 }
 
 .homepage {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .homepage__logo {
@@ -93,19 +76,10 @@ button {
 }
 
 .login-options {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: column;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-options__login {
@@ -123,15 +97,9 @@ button {
 }
 
 .main-logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-logo-container .main-logo {
@@ -146,15 +114,9 @@ button {
 }
 
 .about-dish__intro {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  justify-content: space-between;
+  align-items: flex-end;
   padding-bottom: 1.5em;
 }
 
@@ -183,40 +145,21 @@ button {
 }
 
 .main-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin: 1.5em 0;
 }
 
 details {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .main-menu__options {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-menu__options li {
@@ -228,8 +171,7 @@ summary {
   color: #F9FAFB;
   border-radius: 5px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   height: 40px;
   width: 145px;
   font-size: 1.125em;
@@ -253,13 +195,8 @@ summary::-webkit-details-marker {
 }
 
 .add-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .add-form__input {
@@ -283,8 +220,7 @@ summary::-webkit-details-marker {
 }
 
 .form-input-labels__dietary {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
 }
 
 .red-button {
@@ -292,16 +228,13 @@ summary::-webkit-details-marker {
   color: #F9FAFB;
   border-radius: 5px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   height: 40px;
   width: 145px;
   font-size: 1.125em;
   font-weight: lighter;
   letter-spacing: 1px;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
 }
 
 .red-file-upload-button {
@@ -309,8 +242,7 @@ summary::-webkit-details-marker {
   color: #F9FAFB;
   border-radius: 5px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   height: 40px;
   width: 145px;
   font-size: 1.125em;
@@ -318,22 +250,14 @@ summary::-webkit-details-marker {
   letter-spacing: 1px;
   width: 100%;
   height: 272px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .dietary-info ul,
 .item-info__info__servings {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -357,39 +281,47 @@ summary::-webkit-details-marker {
 }
 
 .item-info__container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 0.5em;
 }
 
 .item-info__info,
 .dietary-info {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 0.25em;
 }
 
 .item-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-top: 1em;
 }
 
 .success-card {
   width: 100%;
+  min-height: 500px;
   position: relative;
 }
 
+.success-title {
+  padding-left: 0.75em;
+  font-size: 2em;
+}
+
+.success-message {
+  font-size: 1.5em;
+}
+
+.success-dish {
+  font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 2.75em;
+}
+
 .success-card__image {
-  width: 100%;
+  width: 100px;
+  height: 100px;
   position: absolute;
   z-index: -1;
   top: 0;
@@ -397,10 +329,13 @@ summary::-webkit-details-marker {
 }
 
 .success-card__info {
+  padding: 1.5em;
   width: 100%;
+  height: 100%;
+  background: white;
+  background: rgba(255, 255, 255, 0.7);
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   top: 0;
   left: 0;
 }
-/*# sourceMappingURL=style.css.map */
