--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -262,11 +262,27 @@ summary::-webkit-details-marker {
 
 .success-card {
   width: 100%;
+  min-height: 500px;
   position: relative;
 }
 
+.success-title {
+  padding-left: $half-base;
+  font-size: $h2-size;
+}
+
+.success-message {
+  font-size: $h3-size;
+}
+
+.success-dish {
+  font-family: $decorative-font;
+  font-size: $h1-size;
+}
+
 .success-card__image {
-  width: 100%;
+  width: 100px;
+  height: 100px;
   position: absolute;
   z-index: -1;
   top: 0;
@@ -274,9 +290,13 @@ summary::-webkit-details-marker {
 }
 
 .success-card__info {
+  padding: $base;
   width: 100%;
+  height: 100%;
+  background: white;
+  background:rgba(255,255,255,0.7);
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   top: 0;
   left: 0;
 }
