--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,3 +1,12 @@
 <a href="/main">
     <h1 class="header">dish.</h1>
+
 </a>
+
+{{#if loggedIn}}
+<p>You are logged in as {{titlecase loggedIn.username}}.
+    <a href="/logout">Log out</a></p>
+{{else}}
+
+<a href="/login">Log in</a>
+{{/if}}
