--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -264,20 +264,35 @@ summary::-webkit-details-marker {
   width: 100%;
   min-height: 500px;
   position: relative;
+  background-size: cover;
 }
 
 .success-title {
+  color: $font-color-light;
   padding-left: $half-base;
   font-size: $h2-size;
 }
 
-.success-message {
+.success-card__message {
   font-size: $h3-size;
 }
 
-.success-dish {
+.success-card__dish {
   font-family: $decorative-font;
   font-size: $h1-size;
+}
+
+.success-card__chef {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.success-card__chef-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  // padding: 0 $base;
 }
 
 .success-card__image {
@@ -290,7 +305,7 @@ summary::-webkit-details-marker {
 }
 
 .success-card__info {
-  padding: $base;
+  // padding: $base;
   width: 100%;
   height: 100%;
   background: white;
