--- a/src/views/success.hbs
+++ b/src/views/success.hbs
@@ -5,11 +5,16 @@
 
   <div class="success-card__info">
 
-<h2 class="success-message">You've {{ action }}ed:</h2>
-<h3 class="success-dish">{{ dish.name }}</h3>
+<h2 class="success-card__message">You've {{ action }}ed:</h2>
+<h3 class="success-card__dish">{{ dish.name }}</h3>
 
-<p class="success-collection-time">{{ dish.collection_time }}</p>
-<p class="success-collection-location">{{ dish.collection_location }}</p>
+<div class="success-card__chef">
+  <img src="{{ user.image }}" class="success-card__chef-image">
+  <p class="success-card__chef-credit">by {{ user.username }}</p>
+</div>
+
+<p class="success-card__collection-time">{{ dish.collection_time }}</p>
+<p class="success-card__collection-location">{{ dish.collection_location }}</p>
 
 <a href="/{{item}}-listings" class='return-link'><i class="fas fa-arrow-left"></i>See more food</a>
 
@@ -17,5 +22,5 @@
 
 </div>
 
-<p>{{ user.username }}</p>
-<p>{{ user.image }}</p>
+<!-- <p>{{ user.username }}</p>
+<p>{{ user.image }}</p> -->
