--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,7 +6,7 @@
 <body>
     <main>
 
-        {{> header loggedIn=loggedIn }}
+        {{> header loggedIn=loggedIn main=main }}
 
 
         {{{body}}}
