--- a/src/views/404.hbs
+++ b/src/views/404.hbs
@@ -1,5 +1,6 @@
-<h1>404 Page Not Found</h1>
+<div class='error'>
+    <img class="error__logo" src="./assets/fried.svg">
+    <h1 class='error__num'>Error 404</h1>
+</div>
 
- <img class="homepage__logo" src="./assets/fried.svg">
-
-{{> footer }}
+<a href="/" class='return-link return-error'><i class="fas fa-arrow-left"></i>take me back home</a>
