--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -1,4 +1,4 @@
-<h2 class="create-header">Create a {{ item }}</h2>
+<h2 class="create-header"><i class="fas fa-utensils"></i>Create a {{ item }}</h2>
 
 <form action="{{ item }}-add" method="post">
   <div class="img-placeholder">
@@ -17,7 +17,7 @@
   <input class="add-form__input" type="text" name="teaser" id="teaser" required>
 
   <label for="spiciness" class="form-input-labels">Spiciness</label>
-  <select class="add-form__input" name="spiciness" id="spiciness" required>
+  <select class="add-form__input spiciness-info" name="spiciness" id="spiciness" required>
     <option value="">--Select spiciness--</option>
     <option value="0">Not spicy</option>
     <option value="1">Mild</option>
@@ -25,37 +25,52 @@
     <option value="3">Spicy</option>
   </select>
 
+
   <h3 class="form-input-labels">Dietary information</h3>
-
-  <label class="form-input-labels__dietary" for="vegetarian">Vegetarian</label>
-  <input type="checkbox" name="vegetarian" id="vegetarian" value=1>
-
-  <label for="vegan">Vegan</label>
-  <input type="checkbox" name="vegan" id="vegan" value="1">
-
-  <label for="gluten-free">Gluten Free</label>
-  <input type="checkbox" name="glutenFree" id="gluten-free" value="1">
-
-  <label for="halal">Halal</label>
-  <input type="checkbox" name="halal" id="halal" value="1">
-
-  <label for="kosher">Kosher</label>
-  <input type="checkbox" name="kosher" id="kosher" value="1">
-
-  <h3 class="form-input-labels">Allergies</h3>
+  <div class="dietary-info">
+    <div class="preference">
+      <label class="form-input-labels__dietary" for="vegetarian">Vegetarian</label>
+      <input class="checkbox" type="checkbox" name="vegetarian" id="vegetarian" value=1>
+    </div>
+    <div class="preference">
+      <label for="vegan">Vegan</label>
+      <input class="checkbox" type="checkbox" name="vegan" id="vegan" value="1">
+    </div>
+    <div class="preference">
+      <label for="gluten-free">Gluten Free</label>
+      <input class="checkbox" type="checkbox" name="glutenFree" id="gluten-free" value="1">
+    </div>
+    <div class="preference">
+      <label for="halal">Halal</label>
+      <input class="checkbox" type="checkbox" name="halal" id="halal" value="1">
+    </div>
+    <div class="preference">
+      <label for="kosher">Kosher</label>
+      <input class="checkbox" type="checkbox" name="kosher" id="kosher" value="1">
+    </div>
+  </div>
 
   <h3 class="form-input-labels">Contains:</h3>
-  <label for="nuts">Nuts</label>
-  <input type="checkbox" name="nuts" id="nuts" value="1">
+  <div class="allergies-info">
+    <div class="preference">
+      <label for="nuts">Nuts</label>
+      <input class="checkbox" type="checkbox" name="nuts" id="nuts" value="1">
+    </div>
 
-  <label for="shellfish">Shellfish</label>
-  <input type="checkbox" name="shellfish" id="shellfish" value="1">
+    <div class="preference">
+      <label for="shellfish">Shellfish</label>
+      <input class="checkbox" type="checkbox" name="shellfish" id="shellfish" value="1">
+    </div>
 
-  <label for="dairy">Dairy</label>
-  <input type="checkbox" name="dairy" id="dairy" value="1">
+    <div class="preference">
+      <label for="dairy">Dairy</label>
+      <input class="checkbox" type="checkbox" name="dairy" id="dairy" value="1">
+    </div>
+  </div>
 
   <label for="servings" class="form-input-labels">Servings</label>
-  <select name="servings" id="servings" required>
+  <select name="servings" id="servings" class='servings-info' required>
+    <option value="">--Select number of servings--</option>
     <option value="1">One</option>
     <option value="2">Two</option>
     <option value="3">Three</option>
@@ -64,16 +79,16 @@
   </select>
 
   <label for="cooked" class="form-input-labels">Cooked</label>
-  <input type="date" name="cooked" id="cooked" value="" min="2019-01-01">
+  <input class='cooked-info' type="date" name="cooked" id="cooked" value="" min="2019-01-01">
 
   <label for="collection" class="form-input-labels">Collection time</label>
-  <input type="datetime-local" name="collection" id="collection" min="2019-01-01T00:00">
+  <input class='collection-info' type="datetime-local" name="collection" id="collection" min="2019-01-01T00:00">
 
   <label for="location" class="form-input-labels">Collection location</label>
-  <input type="text" name="location" id="location" required>
+  <input class='location-info' type="text" name="location" id="location" required>
 
   <label for="additional" class="form-input-labels">Additional Info</label>
-  <textarea name="additional" id="additional" rows="5" required></textarea>
+  <textarea class='additional-info' name="additional" id="additional" rows="5" required></textarea>
 
   {{else}}
 
@@ -121,7 +136,7 @@
 
   {{/if}}
 
-  <button type="submit" class='red-button'>Create</button>
-
-
+  <div class='post-item'>
+    <button type="submit" class='post-item__button'>Create</button>
+  </div>
 </form>
