reformatting le date/time parsing Fixes #211

--- a/src/views/info.hbs
+++ b/src/views/info.hbs
@@ -34,7 +34,8 @@
         <li>🍽</li>
         {{/if}}
       </ul>
-      <p class="item-info__info__cooked">Cooked: {{moment this.date_cooked}}</p>
+      <p class="success-card__collection-time">Collect: {{collect this.collection_time }}</p>
+      <p class="item-info__info__cooked">Cooked: {{cooked this.date_cooked}}</p>
       <p class="item-info__info__description">{{this.description}}</p>
     </div>
     {{/if}}
